Fix malformed & nested <p> tags.

--- a/csdb/collection/graphics.ini
+++ b/csdb/collection/graphics.ini
@@ -370,7 +370,7 @@ FPC=N
 
 [EllipsifyText]
 DescEx="<p>Shortens the given text if necessary to fit within <var>MaxWidth</var> pixels on the given canvas.</p><p>If <var>AsPath</var> is True the text is shortened path-wise by inserting an ellipsis in the text body, otherwise it is trunctated and an ellipsis is appended.</p>"
-Extra="<p.>Provided by Bill Miller.</p."
+Extra="<p>Provided by Bill Miller.</p>"
 Units=Graphics,SysUtils,Classes,Windows
 Snip=161.dat
 Delphi2=Y
