--- a/csdb/collection/shell.ini
+++ b/csdb/collection/shell.ini
@@ -312,7 +312,7 @@ FPC=Y
 
 [GetKnownFolderPath]
 DescEx="<p>Returns the &quot;known folder path&quot; specified by <var>FolderID</var>, or the empty string if <var>FolderID</var> is not valid on the host operating system.</p>"
-Extra="<p>This routine requires Windows Vista or later.</p><p>Contributed by Ariel Rivas.<p>"
+Extra="<p>This routine requires Windows Vista or later.</p><p>Contributed by Ariel Rivas.</p>"
 Units=ShlObj,ActiveX
 SeeAlso=SpecialFolderPath
 Snip=502.dat
