Correct snippet test level
Corrected `RFC1123DateGMT` snippet test level from `advanced` to
`basic`: no unit etc. tests found.

--- a/collection/date.ini
+++ b/collection/date.ini
@@ -1204,7 +1204,7 @@ FPC=Y
 DescEx="<p>Returns the given date time value, which must be in GMT/UTC, as a RFC1123 formatted string.</p>"
 Units=SysUtils
 SeeAlso=NowGMT
-TestInfo=advanced
+TestInfo=basic
 Snip=629.dat
 Delphi2=N
 Delphi3=Y
